--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
 
       - name: Download
         run: |
-          curl -L "https://lichess.org/api/games/user/Nikitosikbot_v2" \
+          curl -L "https://lichess.org/api/games/user/Endogenetic-Bot" \
             -G \
             --data-urlencode "since=${{ steps.time.outputs.since }}" \
             -d "perfType=bullet,blitz,rapid,classical" \
@@ -30,5 +30,5 @@ jobs:
       - name: Upload PGN file as artifact
         uses: actions/upload-artifact@v4
         with:
-          name: nikitosikbot_winning_games_pgn
-          path: winning_games.pgn
+          name: Endogenetic-Bot_games_pgn
+          path: Endogenetic-Bot.pgn
