--- a/.github/workflows/Exo.yml
+++ b/.github/workflows/Exo.yml
@@ -27,18 +27,15 @@ jobs:
             -H "Accept: application/x-chess-pgn" \
             -o Exogenetic-Bot.pgn
 
-      - name: Combine all PGN files into one
-        run: cat *.pgn > all.pgn
-
       - name: Set up Git user for GitHub Actions bot
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
 
-      - name: Commit and push all.pgn to repository
+      - name: Commit and push Exogenetic-Bot.pgn to repository
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          git add all.pgn
-          git diff --cached --quiet all.pgn || git commit -m "Combine all PGN files into all.pgn"
+          git add Exogenetic-Bot.pgn
+          git diff --cached --quiet Exogenetic-Bot.pgn || git commit -m "Update Exogenetic-Bot.pgn from workflow"
           git push
