--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,22 +8,27 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-    - name: Install Polyglot
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y polyglot
+      - name: Install Polyglot
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y polyglot
 
-    - name: Build .bin from .pgn
-      run: |
-        polyglot make-book -pgn combined.pgn -bin win.bin -min-game 1
+      - name: Build .bin from .pgn
+        run: |
+          polyglot make-book -pgn combined.pgn -bin win.bin -min-game 1
 
-    - name: Commit and push win.bin to repository
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: |
-        git add win.bin
-        git diff --cached --quiet win.bin || git commit -m "Update win.bin book from workflow"
-        git push
+      - name: Set up Git user for GitHub Actions bot
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
+
+      - name: Commit and push win.bin to repository
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          git add win.bin
+          git diff --cached --quiet win.bin || git commit -m "Update win.bin book from workflow"
+          git push
