--- a/.github/workflows/Combine.yml
+++ b/.github/workflows/Combine.yml
@@ -1,18 +1,29 @@
-name: Combine PGN Files
+name: Combine and Validate PGN Files
 
 on:
   workflow_dispatch:
 
 jobs:
-  combine-pgn:
+  combine-and-validate-pgn:
     runs-on: ubuntu-latest
 
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
 
+      - name: Install pgn-extract (PGN validator)
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y pgn-extract
+
       - name: Combine all PGN files into one
         run: cat *.pgn > all.pgn
+
+      - name: Validate combined PGN and overwrite all.pgn
+        run: |
+          # pgn-extract filters out games with illegal moves, outputting only valid games
+          pgn-extract -Wuci -s all.pgn -o all.tmp.pgn
+          mv all.tmp.pgn all.pgn
 
       - name: Set up Git user for GitHub Actions bot
         run: |
@@ -24,5 +35,5 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git add all.pgn
-          git diff --cached --quiet all.pgn || git commit -m "Combine all PGN files into all.pgn"
+          git diff --cached --quiet all.pgn || git commit -m "Combine and validate PGN files to all.pgn"
           git push
