--- a/.github/workflows/Combine.yml
+++ b/.github/workflows/Combine.yml
@@ -16,8 +16,9 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y pgn-extract
 
-      - name: Combine all PGN files into one
-        run: cat *.pgn > all.pgn
+      - name: Combine all PGN files into one (excluding all.pgn)
+        run: |
+          ls *.pgn | grep -v '^all\.pgn$' | xargs cat > all.pgn
 
       - name: Validate combined PGN and overwrite all.pgn
         run: |
