--- a/.github/workflows/Combine.yml
+++ b/.github/workflows/Combine.yml
@@ -18,11 +18,10 @@ jobs:
 
       - name: Combine all PGN files into one (excluding all.pgn)
         run: |
-          ls *.pgn | grep -v '^all\.pgn$' | xargs cat > all.pgn
+          find . -maxdepth 1 -type f -name "*.pgn" ! -name "all.pgn" -exec cat {} + > all.pgn
 
       - name: Validate combined PGN and overwrite all.pgn
         run: |
-          # pgn-extract filters out games with illegal moves, outputting only valid games
           pgn-extract -Wuci -s all.pgn -o all.tmp.pgn
           mv all.tmp.pgn all.pgn
 
