--- a/.github/workflows/Combine.yml
+++ b/.github/workflows/Combine.yml
@@ -1,30 +1,44 @@
-name: ♟️ Combine All PGN Files (No Filtering) ✅
+name: ♟️ Combine, Strictly Validate PGN, and Build Book ✅
 
 on:
   workflow_dispatch:
 
 jobs:
-  combine-pgn:
+  combine-and-build-book:
     runs-on: ubuntu-latest
 
     steps:
       - name: 📥 Check out repository
         uses: actions/checkout@v4
 
+      - name: 🧰 Install PGN tools and Polyglot
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y pgn-extract polyglot
+
       - name: 📚 Combine all PGN files (excluding all.pgn)
         run: |
           find . -maxdepth 1 -type f -name "*.pgn" ! -name "all.pgn" -exec cat {} + > all.pgn
 
-      - name: ♟️ Build Polyglot book from all.pgn (no filter)
+      - name: 🦾 Strict PGN validation (removes illegal moves AND broken games)
         run: |
-          sudo apt-get update
-          sudo apt-get install -y polyglot
-          polyglot make-book -pgn all.pgn -bin win.bin
+          # Remove illegal moves and broken games (empty games, games with illegal results, etc.)
+          pgn-extract -Wuci -s -C -V -r all.pgn -o all.valid.pgn
+          mv all.valid.pgn all.pgn
+
+      - name: ♟️ Build Polyglot book from all.pgn
+        run: |
+          polyglot make-book -pgn all.pgn -bin win.bin -min-game 1
+
+      - name: 🤖 Set up Git user for GitHub Actions bot
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
 
       - name: 🚀 Commit and push all.pgn and win.bin to repository
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git add all.pgn win.bin
-          git diff --cached --quiet all.pgn win.bin || git commit -m "♟️ Combine all PGN files and build Polyglot book"
+          git diff --cached --quiet all.pgn win.bin || git commit -m "♟️ Combine, strictly validate PGN, and build Polyglot book"
           git push
