--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -37,5 +37,5 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git add BOT_Stockfish13.pgn
-          git diff --cached --quiet Exogenetic-Bot.pgn || git commit -m "Update Exogenetic-Bot.pgn from workflow"
+          git diff --cached --quiet BOT_Stockfish13.pgn || git commit -m "Add files via upload"
           git push
