--- a/.github/workflows/Create.yml
+++ b/.github/workflows/Create.yml
@@ -1,11 +1,20 @@
 name: Create
 
 on:
-  workflow_dispatch:  
+  workflow_dispatch:
+    inputs:
+      pgn_name:
+        description: "Enter the PGN file name"
+        required: true
+        default: "output"
+      bin_name:
+        description: "Enter the BIN book name"
+        required: true
+        default: "SF"
 
 jobs:
   convert:
-    runs-on: windows-latest  
+    runs-on: windows-latest
 
     steps:
     - name: Checkout repo
@@ -15,8 +24,10 @@ jobs:
       shell: cmd
       run: create.bat
 
-    - name: Upload PGN files
+    - name: Upload PGN and BIN files
       uses: actions/upload-artifact@v4
       with:
         name: Book
         path: |
+          ${{ github.event.inputs.pgn_name }}.pgn
+          ${{ github.event.inputs.bin_name }}.bin
