--- a/.github/workflows/Create.yml
+++ b/.github/workflows/Create.yml
@@ -6,11 +6,11 @@ on:
       pgn_file:
         description: "Enter the PGN file name "
         required: true
-        default: "FilteredGames"
+        default: "FilteredGames.pgn"
       bin_name:
         description: "Enter the BIN output file name"
         required: true
-        default: "Some"
+        default: "Some.pgn"
 
 jobs:
   convert:
